cmake_minimum_required(VERSION 3.29)
project(Bases_Program)

set(CMAKE_CXX_STANDARD 20)

add_executable(Bases_Program_Ejercicio1
        "Ejercicio1/main.cpp"
        "Ejercicio1/main.h"
)
add_executable(Bases_Program_Ejercicio2
        "Ejercicio2/main.cpp"
        "Ejercicio2/main.h"
)
add_executable(Bases_Program_Ejercicio3
        "Ejercicio3/main.cpp"
        "Ejercicio3/main.h"
        Ejercicio3/main.cpp
)
add_executable(Bases_Program_Ejercicio4
        "Ejercicio4/main.cpp"
        "Ejercicio4/main.h"
        Ejercicio4/main.cpp
)
add_executable(Bases_Program_BucleDo
        "BucleDo/main.cpp"
        BucleDo/main.cpp
)
add_executable(Bases_Program_BucleFor
        "BucleFor/main.cpp"
)
add_executable(Bases_Program_BucleWhile
        "BucleWhile/main.cpp"
)
add_executable(Bases_Program_InstruccionSalto
        "InstruccionSalto/main.cpp"
        BucleWhile/main.cpp
)
